part1/e112/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proj01-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proj01
  template:
    metadata:
      labels:
        app: proj01
    spec:
      volumes:
        - name: shared-share
          persistentVolumeClaim:
            claimName: share-claim
      containers:
        - name: proj01
          image: rvlq/project:v0.6
          volumeMounts: # Mount volume
          - name: shared-share
            mountPath: /app/images
